# QUBO

./: .env  .env.example  .gitignore  Dockerfile  Procfile  README.md  README_DEPLOY.md  pyproject.toml  requirements.txt  setup.py  vercel.json
.github/workflows/: ci.yml
docs/: index.md  quickstart.md
examples/: demo_run.py  gemini_test.py  grover.ipynb  hello_world.ipynb  qft.ipynb  tf_variational.py  vqe_template.ipynb
html/: app.js  index.html  style.css
qubo/: __init__.py  autodiff.py  circuit.py  cli.py  config.py  copilot.py  density.py  example_circuit.py  exec_helper.py  gates.py  gui.py  noise.py  service.py  simulator.py  visualizer.py
qubo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
qubo/backends/: jax_backend.py
scripts/: install_and_check.py  start_and_check_service.py  status_response.json  test_service_import.py
tests/: test_autodiff.py  test_circuit.py  test_density.py  test_gates.py  test_jax_backend.py  test_noise.py  test_simulator.py
tools/: post_run_test.py
